# embrace-2020

./: README.md
angular/: Dockerfile  package-lock.json
client/: package.json
client/nginx/: nginx.conf
client/src/: styles.scss
client/src/app/: app.component.html
client/src/app/components/cases/: cases.component.html  cases.component.scss  cases.component.ts
client/src/app/components/embrace/: embrace.component.html  embrace.component.ts  embrace.service.ts
client/src/app/components/footer/: footer.component.html
client/src/app/components/modal/: modal.component.html  modal.component.scss  modal.component.ts
client/src/environments/: environment.prod.ts
python/: Dockerfile
python/app/: Dockerfile  requirements.txt
python/src/: generate_model.py  main.py  model.pkl  pyproject.toml  requirements.txt  server.py  test.csv
